[package]
name = "rinputer3"
version = "0.0.1"
edition = "2021"

[dependencies]
clap = { version = "3.2.14", features = ["derive"] }
evdev = { git = "https://github.com/Maccraft123/evdev.git", branch = "serde_feature", features = ["serde"] }
anyhow = "1.0.58"
interprocess = "1.1.1"
serde = { version = "1.0", features = [ "derive" ]}
ron = "0.7"
